feat[GEN-53]: Implementada a visualização de colunas e tarefas por projeto referenciado pelo id do usuário
Este commit refatora a aplicação para que cada projeto tenha suas próprias colunas e tarefas, visíveis apenas para os usuários associados.

- Backend:
  - Colunas e Tarefas agora são vinculadas a Projetos através de um 'proj_id'.
  - Projetos são vinculados a Usuários.
  - Criados novos endpoints para buscar dados por projeto (ex: '/colunas/por-projeto/{id}').
  - Adicionada funcionalidade que cria 3 colunas padrão para cada novo projeto.

- Frontend:
  - A barra lateral agora lista apenas os projetos do usuário autenticado.
  - O quadro Kanban se torna dinâmico, exibindo apenas as colunas e tarefas do projeto selecionado.
  - Todas as chamadas para a API agora são autenticadas.