@@ -2,10 +2,12 @@ package com.taskmanager.taskmngr_backend.controller;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -20,6 +22,7 @@ import org.springframework.web.bind.annotation.RestController;
 import com.taskmanager.taskmngr_backend.exceptions.personalizados.projetos.ProjetoNaoEncontradoException;
 import com.taskmanager.taskmngr_backend.model.AdicionadorLinkProjetos;
 import com.taskmanager.taskmngr_backend.model.ProjetoModel;
+import com.taskmanager.taskmngr_backend.model.UsuarioModel;
 import com.taskmanager.taskmngr_backend.model.dto.ProjetoDTO;
 import com.taskmanager.taskmngr_backend.service.ProjetoConverterService;
 import com.taskmanager.taskmngr_backend.service.ProjetoService;
@@ -36,6 +39,16 @@ public class ProjetoController {
     @Autowired
     private ProjetoConverterService projetoConverterService;
 
+    @GetMapping("/meus-projetos")
+    public ResponseEntity<List<ProjetoDTO>> listarProjetosDoUsuario(@AuthenticationPrincipal UsuarioModel usuario) {
+        List<ProjetoModel> projetos = projetoService.listarPorUsuario(usuario);
+        List<ProjetoDTO> dtos = projetos.stream()
+                .map(projetoConverterService::modelParaDto)
+                .collect(Collectors.toList());
+        adicionadorLink.adicionarLink(dtos);
+        return ResponseEntity.ok(dtos);
+    }
+
     @GetMapping("/{proj_id}")
     public ResponseEntity<ProjetoDTO> buscarPorId(@PathVariable String proj_id) {
         ProjetoModel projeto = projetoService.buscarPorId(proj_id)
@@ -49,28 +62,37 @@ public class ProjetoController {
         return ResponseEntity.ok(dto);
     }
 
+    // ENDPOINT para admin. (talvez remover depois)
     @GetMapping("/listar")
     public ResponseEntity<List<ProjetoDTO>> listarTodas() {
         List<ProjetoModel> projetos= projetoService.listarTodas();
-        List<ProjetoDTO> dtos = projetos.stream().map(projetoConverterService::modelParaDto).toList();
+        List<ProjetoDTO> dtos = projetos.stream().map(projetoConverterService::modelParaDto).collect(Collectors.toList());
         adicionadorLink.adicionarLink(dtos);
         return ResponseEntity.ok(dtos);
     }
 
+    // ... dentro da classe ProjetoController
+
     @PostMapping("/cadastrar")
-    public ResponseEntity<String> cadastrarProjeto(@RequestBody ProjetoDTO dto) {
+    public ResponseEntity<String> cadastrarProjeto(@RequestBody ProjetoDTO dto, @AuthenticationPrincipal UsuarioModel usuarioLogado) {
         ProjetoModel projeto = projetoConverterService.dtoParaModel(dto);
-        projetoService.salvar(projeto);
+
+        if (usuarioLogado != null) {
+            projeto.setUsuarioIds(List.of(usuarioLogado.getUsu_id()));
+        }
+        projetoService.criarNovoProjeto(projeto);
+
         return ResponseEntity.status(HttpStatus.CREATED).body("Projeto cadastrado com sucesso!");
     }
+
 
     @PutMapping("/atualizar/{proj_id}")
     public ResponseEntity<String> atualizar(@PathVariable String proj_id, @RequestBody ProjetoDTO dto) {
         Optional<ProjetoModel> projetoExistente = projetoService.buscarPorId(proj_id);
         if (projetoExistente.isEmpty()) {
             throw new ProjetoNaoEncontradoException(
-                "Projeto não encontrado",
-                "Projeto com id " + proj_id + " não foi encontrado"
+                    "Projeto não encontrado",
+                    "Projeto com id " + proj_id + " não foi encontrado"
             );
         }
         ProjetoModel p = projetoExistente.get();
